force-app/main/default/objects/Survey_Financial__c/Survey_Financial__c.object-meta.xml
<CustomObject>
    <label>Survey Financial</label>
    <nameField>
        <label>Survey Financial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Financials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>