force-app/main/default/objects/Survey_Financial__c/fields/Account_Payable_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Account_Payable_Ratio__c</fullName>
    <label>Account Payable Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>