force-app/main/default/objects/Survey_Financial__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <formula>HYPERLINK( Pop_Edit_Url__c , &quot;Edit&quot;,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action</label>
    <type>Text</type>
</CustomField>