force-app/main/default/objects/Survey_Financial__c/fields/Apakah_Terkait_Profesi_Berbahaya__c.field-meta.xml
<CustomField>
    <fullName>Apakah_Terkait_Profesi_Berbahaya__c</fullName>
    <label>Apakah Terkait Profesi Berbahaya?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>