force-app/main/default/objects/Survey_Financial__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Survey Financials</relationshipLabel>
    <relationshipName>Survey_Financials</relationshipName>
    <type>Lookup</type>
</CustomField>