force-app/main/default/objects/Survey_Financial__c/fields/Asset_Tidak_Lancar_Lainnya__c.field-meta.xml
<CustomField>
    <fullName>Asset_Tidak_Lancar_Lainnya__c</fullName>
    <label>Asset Tidak Lancar Lainnya</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>