force-app/main/default/objects/Survey_Financial__c/fields/Average_Day_Net_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Average_Day_Net_Profit_Margin__c</fullName>
    <label>Average Day Net Profit Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>