force-app/main/default/objects/Survey_Financial__c/fields/Average_Day_Sales__c.field-meta.xml
<CustomField>
    <fullName>Average_Day_Sales__c</fullName>
    <label>Average Day Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>