force-app/main/default/objects/Survey_Financial__c/fields/Average_Market_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Market_Price__c</fullName>
    <formula>( Estimasi_Harga_Pembanding_1__c +  Estimasi_Harga_Pembanding_2__c +  Estimasi_Harga_Pembanding_3__c ) / 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Market Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>