force-app/main/default/objects/Survey_Financial__c/fields/Beban_Lain_Lain__c.field-meta.xml
<CustomField>
    <fullName>Beban_Lain_Lain__c</fullName>
    <label>Beban Lain - Lain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>