force-app/main/default/objects/Survey_Financial__c/fields/Debt_to_Total_Asset__c.field-meta.xml
<CustomField>
    <fullName>Debt_to_Total_Asset__c</fullName>
    <label>Debt to Total Asset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>