force-app/main/default/objects/Survey_Financial__c/fields/Estimasi_Harga_Pembanding_1__c.field-meta.xml
<CustomField>
    <fullName>Estimasi_Harga_Pembanding_1__c</fullName>
    <label>Estimasi Harga Pembanding 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>