force-app/main/default/objects/Survey_Financial__c/fields/fncApplicationc__c.field-meta.xml
<CustomField>
    <fullName>fncApplicationc__c</fullName>
    <formula>Survey__r.Opportunity__r.Application__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fncApplicationc</label>
    <type>Text</type>
</CustomField>