force-app/main/default/objects/Survey_Financial__c/fields/Hutang_Bank_Jangka_Panjang__c.field-meta.xml
<CustomField>
    <fullName>Hutang_Bank_Jangka_Panjang__c</fullName>
    <label>Hutang Bank Jangka Panjang</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>