force-app/main/default/objects/Survey_Financial__c/fields/Hutang_Dagang_Usaha__c.field-meta.xml
<CustomField>
    <fullName>Hutang_Dagang_Usaha__c</fullName>
    <label>Hutang Dagang/Usaha</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>