force-app/main/default/objects/Survey_Financial__c/fields/Hutang_Gaji__c.field-meta.xml
<CustomField>
    <fullName>Hutang_Gaji__c</fullName>
    <label>Hutang Gaji</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>