force-app/main/default/objects/Survey_Financial__c/fields/Hutang_Usaha_Jangka_Panjang__c.field-meta.xml
<CustomField>
    <fullName>Hutang_Usaha_Jangka_Panjang__c</fullName>
    <label>Hutang Usaha Jangka Panjang</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>