force-app/main/default/objects/Survey_Financial__c/fields/Inventory_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Turnover__c</fullName>
    <label>Inventory Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>