force-app/main/default/objects/Survey_Financial__c/fields/Kendaraan__c.field-meta.xml
<CustomField>
    <fullName>Kendaraan__c</fullName>
    <label>Kendaraan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>