force-app/main/default/objects/Survey_Financial__c/fields/Laba_Tahun_Berjalan__c.field-meta.xml
<CustomField>
    <fullName>Laba_Tahun_Berjalan__c</fullName>
    <label>Laba Tahun Berjalan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>