force-app/main/default/objects/Survey_Financial__c/fields/LTV_of_asset_market_price__c.field-meta.xml
<CustomField>
    <fullName>LTV_of_asset_market_price__c</fullName>
    <label>LTV of asset market price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>