force-app/main/default/objects/Survey_Financial__c/fields/Net_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Net_Profit_Margin__c</fullName>
    <label>Net Profit Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>