force-app/main/default/objects/Survey_Financial__c/fields/Pendapatan_Lain_Lain__c.field-meta.xml
<CustomField>
    <fullName>Pendapatan_Lain_Lain__c</fullName>
    <label>Pendapatan Lain - Lain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>