force-app/main/default/objects/Survey_Financial__c/fields/Pendapatan_Penjualan__c.field-meta.xml
<CustomField>
    <fullName>Pendapatan_Penjualan__c</fullName>
    <label>Pendapatan / Penjualan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>