force-app/main/default/objects/Survey_Financial__c/fields/Period_Sort__c.field-meta.xml
<CustomField>
    <fullName>Period_Sort__c</fullName>
    <formula>VALUE(TEXT(Period_Year__c) &amp; RIGHT(&quot;0&quot; &amp; TEXT(Period_Month__c),2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period Sort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>