force-app/main/default/objects/Survey_Financial__c/fields/Perlengkapan__c.field-meta.xml
<CustomField>
    <fullName>Perlengkapan__c</fullName>
    <label>Perlengkapan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>