force-app/main/default/objects/Survey_Financial__c/fields/Pop_Edit_Url__c.field-meta.xml
<CustomField>
    <fullName>Pop_Edit_Url__c</fullName>
    <formula>&quot;/lightning/action/quick/Survey_Financial__c.Pop_Edit?objectApiName&amp;context=RECORD_DETAIL&amp;recordId=&quot;&amp; CASESAFEID(Id) &amp;&quot;&amp;backgroundContext=%2Flightning%2Fr%2FSurvey__c%2F&quot;&amp; CASESAFEID(Survey__c) &amp;&quot;%2Fview&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pop_Edit_Url</label>
    <type>Text</type>
</CustomField>