force-app/main/default/objects/Survey_Financial__c/fields/Return_on_Equity_ROE__c.field-meta.xml
<CustomField>
    <fullName>Return_on_Equity_ROE__c</fullName>
    <label>Return on Equity (ROE)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>