force-app/main/default/objects/Survey_Financial__c/fields/Return_on_Investment_ROI__c.field-meta.xml
<CustomField>
    <fullName>Return_on_Investment_ROI__c</fullName>
    <label>Return on Investment (ROI)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>