force-app/main/default/objects/Survey_Financial__c/fields/Status_Penilaian__c.field-meta.xml
<CustomField>
    <fullName>Status_Penilaian__c</fullName>
    <formula>IF( KJPP_Estimasi_Harga_Pembanding_1__c &gt; 0 || PRE_Estimasi_Harga_Pembanding_1__c &gt; 0 || NJOP_Estimasi_Harga_Pembanding_1__c &gt; 0 , &quot;Complete&quot;, &quot;Incomplete&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Penilaian</label>
    <type>Text</type>
</CustomField>