force-app/main/default/objects/Survey_Financial__c/fields/Tanah__c.field-meta.xml
<CustomField>
    <fullName>Tanah__c</fullName>
    <label>Tanah</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>