force-app/main/default/objects/Survey_Financial__c/fields/Total_Hutang_Jangka_Panjang__c.field-meta.xml
<CustomField>
    <fullName>Total_Hutang_Jangka_Panjang__c</fullName>
    <label>Total Hutang Jangka Panjang</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>