force-app/main/default/objects/Survey_Financial__c/fields/Total_Modal__c.field-meta.xml
<CustomField>
    <fullName>Total_Modal__c</fullName>
    <label>Total Modal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>